# aivoifu-runpod

./: .gitignore  Dockerfile  build_n_push.sh  pyproject.toml  requirements.txt  test_input.json
src/: handler.py
